# earth

./: .gitignore  CHANGELOG.md  Makefile  README.md  earth_test.duckdb  pyproject.toml  requirements.txt  setup.sh
.github/: release-please-config.json
.github/workflows/: ci.yml  docs.yml  release-please.yml  security.yml  test-publish.yml
app/: __init__.py  main.py
app/workflows/: __init__.py  base.py  config.py  dataset_orchestrator.py  full_dataset.py  generate_companies.py  generate_people.py  unified_workflow.py
logs/test/reports/latest/: latest.html  latest.json  latest.markdown  latest.md
scripts/data/: benchmark.py  sample.py  stats.py
scripts/main/: workflows.py
scripts/test/: report.py  runner.py
src/: __init__.py  loader.py  pyproject.toml  utils.py
src/earth/: __init__.py
src/earth/core/: __init__.py  loader.py  utils.py
src/earth/generators/: __init__.py  base.py  career.py  company.py  factory.py  person.py
src/generators/: __init__.py  career.py  person.py
test/: unit_test.py
tests/: __init__.py  __main__.py  unit_test.py
tests/app/: test_main.py  test_workflows.py
tests/core/: test_loader.py
tests/generators/: test_person.py
