[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earth"
version = "0.1.0"
description = "Synthetic data generation platform for analytics engineering"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Chris Adan"},
]
keywords = ["data", "analytics", "synthetic", "faker", "duckdb"]
dependencies = [
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "faker>=20.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "dbt-duckdb>=1.6.0",
    "prefect>=2.14.0",
]

[tool.setuptools]
py-modules = ["loader", "utils"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["generators*"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true